# AppleSilicons

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
STREAM/: STREAM-CPU.sh  metalBuild.txt  plotSTREAM.py  stream.metal  streamMetal.mm
control/: .env  benchmark.py  compute_checks.py  config.py  make_analysis.py  make_matrices.py  plot.py  requirements.txt
data/: matrix-1000-0.float32  matrix-1000-1.float32  matrix-10000-0.float32  matrix-10000-1.float32  matrix-150-0.float32  matrix-150-1.float32  matrix-2000-0.float32  matrix-2000-1.float32  matrix-500-0.float32  matrix-500-1.float32  matrix-5000-0.float32  matrix-5000-1.float32
lib/: ShaderParams.h  testlib.h
libgpu/: gpulib.h  shaderinfo.h
matmul-blas/: main.cpp
matmul-cpu-base/: main.cpp
matmul-cpu-omp/: main.cpp
matmul-dsp/: main.cpp
matmul-gpu-base/: main.cpp  main.mm
matmul-gpu-mps/: main.mm
matmul-gpu-nv/: main.mm
metal_shaders/: mat_mul_optimized_nv.metal  mat_mul_simple1.metal
